@@ -1,6 +1,6 @@
-/* $Id$
+/*
  * -------------------------------------------------------
- * Copyright (C) 2002-2006 Tommi Saviranta <wnd@iki.fi>
+ * Copyright (C) 2002-2007 Tommi Saviranta <wnd@iki.fi>
  *	(C) 2002 Lee Hardy <lee@leeh.co.uk>
  *	(C) 1998-2002 Sebastian Kienzl <zap@riot.org>
  * -------------------------------------------------------
@@ -81,8 +81,10 @@ int irc_read(connection_type *connection);
 int irc_connect(connection_type *connection, server_type *server,
 		char *nick, char *username, char *realname, char *bindto);
 
-int irc_mnotice(clientlist_type *clients, char *nick, char *format, ...);
-void irc_notice(connection_type *connection, char *nick, char *format, ...);
+int irc_mnotice(clientlist_type *clients, const char *nick,
+		const char *format, ...);
+void irc_notice(connection_type *connection, const char *nick,
+		const char *format, ...);
 
 
 #define RPL_MYINFO_LEN		4
