@@ -1,6 +1,6 @@
-/* $Id$
+/*
  * -------------------------------------------------------
- * Copyright (C) 2002-2005 Tommi Saviranta <wnd@iki.fi>
+ * Copyright (C) 2002-2007 Tommi Saviranta <wnd@iki.fi>
  *	(C) 1998-2000 Sebastian Kienzl <zap@riot.org>
  * -------------------------------------------------------
  * This program is free software; you can redistribute it and/or modify
@@ -40,7 +40,7 @@ typedef struct {
 
 void add_perm(permlist_type *table, char *name, const int allowed);
 void empty_perm(permlist_type *table);
-int is_perm(permlist_type *table, char *name);
+int is_perm(permlist_type *table, const char *name);
 
 
 extern permlist_type connhostlist;
